--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,57 @@
-body {
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+}
+
+:root {
+  --primary: #5d666b;
+  --secondary: #f7f8fa;
+  --border: #dddddd;
+  --form-label: #869397;
+}
+
+/* reset */
+body,
+p,
+a,
+ul,
+li {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  padding: 0;
+  text-decoration: none;
+}
+
+li {
+  list-style: none;
+}
+
+/* base styles */
+body {
+  min-height: 100vh;
+  background-color: var(--secondary);
+  color: var(--primary);
+  font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.grid {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  gap: 10px;
+}
+
+.flex {
+  display: flex;
+  align-items: center;
+}
+
+@media screen and (max-width: 559px) {
+}
+
+@media screen and (min-width: 560px) {
+}
+
+@media screen and (min-width: 768px) {
 }
