--- a/src/components/Course/course.css
+++ b/src/components/Course/course.css
@@ -111,6 +111,7 @@
   .course-wrapper .img-wrapper img {
     max-width: 300px;
     object-fit: contain;
+    display: block;
   }
 
   .course-wrapper .title-wrapper {
